<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.power.kitchen.activity.AddAdressActivity">
    <include layout="@layout/item_title_layout"/>

    <RelativeLayout
        android:id="@+id/username_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xm"
            style="@style/black_textview"/>
        <EditText
            android:id="@+id/username_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:background="@null"
            android:hint="@string/qsrxm"
            android:layout_alignParentRight="true"
            style="@style/gary_textview"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gary02"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <RelativeLayout
        android:id="@+id/gsmc_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="15dp">
        <TextView
            android:id="@+id/view_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="公司名称"
            style="@style/black_textview"/>
        <EditText
            android:id="@+id/gsmc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="请输入公司名称"
            android:singleLine="true"
            android:gravity="end"
            android:layout_marginLeft="10dp"
            style="@style/gary_textview"
            android:layout_toRightOf="@+id/view_01"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gary02"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <RelativeLayout
        android:id="@+id/telnum_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lxdh"
            style="@style/black_textview"/>
        <EditText
            android:id="@+id/telnum_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="end"
            android:phoneNumber="true"
            android:hint="@string/qsrlxdh"
            android:layout_alignParentRight="true"
            style="@style/gary_textview"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gary02"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <RelativeLayout
        android:id="@+id/adress_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="15dp">
        <TextView
            android:id="@+id/tv_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/szqy"
            style="@style/black_textview"/>
        <TextView
            android:id="@+id/adress_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_toRightOf="@+id/tv_01"
            android:layout_marginLeft="30dp"
            style="@style/gary_textview"/>
        <ImageView
            android:id="@+id/adress_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/location_iv"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:layout_alignParentRight="true"
            android:src="@mipmap/kc_arrowhead_gary" />
        <!--<ImageView
            android:id="@+id/location_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="5dp"
            android:src="@mipmap/kc_dingwei_icon"
            android:layout_alignParentRight="true"/>-->

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gary02"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <RelativeLayout
        android:id="@+id/detailadress_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="15dp">
        <TextView
            android:id="@+id/text01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xxdz"
            style="@style/black_textview"/>
        <EditText
            android:id="@+id/detailadress_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/text01"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/qsrndxxdz"
            android:gravity="end"
            android:singleLine="true"
            android:layout_alignParentRight="true"
            style="@style/gary_textview"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/gary01" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swmr"
            android:layout_centerVertical="true"
            style="@style/black_textview"/>
        <com.suke.widget.SwitchButton
            android:id="@+id/moren_switchBtn"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            app:sb_show_indicator="false" />
    </RelativeLayout>
</LinearLayout>
