<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gary_background02"
    tools:context="com.power.kitchen.activity.SettingActivity">

    <include layout="@layout/item_title_layout" />

    <RelativeLayout
        android:id="@+id/username_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xm"
            style="@style/black_textview"/>
        <TextView
            android:id="@+id/username_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="孙尚香"
            android:layout_alignParentRight="true"
            style="@style/gary_textview"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gary02"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <RelativeLayout
        android:id="@+id/canting_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ctmc"
            style="@style/black_textview"/>
        <TextView
            android:id="@+id/canting_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="深渊峡谷"
            android:layout_alignParentRight="true"
            style="@style/gary_textview"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gary02"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <RelativeLayout
        android:id="@+id/telnum_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sjh"
            style="@style/black_textview"/>
        <TextView
            android:id="@+id/telnum_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="17611225393"
            android:layout_alignParentRight="true"
            style="@style/gary_textview"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gary02"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <RelativeLayout
        android:id="@+id/adress_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/szqy"
            style="@style/black_textview"/>
        <TextView
            android:id="@+id/adress_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="北京市海淀区"
            android:singleLine="true"
            android:layout_toLeftOf="@+id/adress_iv"
            style="@style/gary_textview"/>
        <ImageView
            android:id="@+id/adress_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:src="@mipmap/kc_arrowhead_gary"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gary02"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <RelativeLayout
        android:id="@+id/detailadress_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xxdz"
            style="@style/black_textview"/>
        <TextView
            android:id="@+id/detailadress_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="中关村软件园"
            android:layout_alignParentRight="true"
            style="@style/gary_textview"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gary02"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <RelativeLayout
        android:id="@+id/adressmanage_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dzgl"
            style="@style/black_textview"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/kc_arrowhead_gary"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

</LinearLayout>
