<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.power.kitchen.activity.MainActivity">
    <LinearLayout
        android:id="@+id/tab_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_tab"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@mipmap/kc_dbdh_bg"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/tab_bxjl_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_marginTop="22dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/tab_bxjl_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/kc_wxjl"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tab_bxjl_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_bxjl"
                android:paddingTop="5dp"
                android:textColor="@color/text_color01"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_baoxiu_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/tab_baoxiu_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/kc_baoxiu"
                android:layout_marginTop="8dp"
                android:layout_gravity="center" />
            <TextView
                android:id="@+id/tab_baoxiu_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_baoxiu"
                android:textColor="@color/text_color01"
                android:paddingTop="13dp"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_grzx_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginTop="22dp"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/tab_grzx_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/kc_mine"
                android:layout_gravity="center" />
            <TextView
                android:id="@+id/tab_grzx_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_grzx"
                android:textColor="@color/text_color01"
                android:paddingTop="5dp"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
